--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,12 @@ edition = "2018"
 dotenv = "0.9.0"
 config = "0.9"
 
+# Experimental error handling abstraction.
+failure = "0.1.6"
+
+# Date and time for rust
+chrono = "0.4.10"
+
 # Extra iterator adaptors, functions and macros.
 itertools = "0.8"
 
@@ -39,8 +45,11 @@ crossbeam-channel = "0.4"
 rayon = "1.3.0"
 
 # A safe, extensible ORM and Query Builder for Rust
-diesel = { version = "1.4.3", features = ["postgres"] }
+diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
 diesel_codegen = { version = "0.8.0", features = ["postgres"] }
+
+# A generic connection pool for Rust.
+r2d2 = "0.8.8"
 
 hyper = { version = "0.9", default-features = false, features = ["security-framework"] }
 
@@ -49,6 +58,13 @@ clap = { git = "https://github.com/clap-rs/clap/" }
 
 # Actix web is a simple, pragmatic and extremely fast web
 # framework for Rust.
+actix = "0.7.4"
 actix-web = "2"
 actix-rt = "1"
 actix-protobuf = "0.5.1"
+
+# hashing passwords using the cryptographically-secure Argon2 hashing algorithm.
+argonautica = "0.2.0"
+
+# Convenience macros to derive tarits easily
+derive_more = "0.99.3"
