--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ actix-http = "0.2.10"
 blob-uuid = "0.3.0"
 chrono = "0.4.6"
 diesel = { version = "1.4.2", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
+diesel-derive-enum = { version = "0.4", features = ["postgres"] }
 dotenv = "0.14.1"
 env_logger = "0.6.1"
 failure = "0.1.5"
