--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ slug = "0.1.4"
 uuid = { version = "0.7.4", features = ["serde", "v4"] }
 validator = "0.8.0"
 validator_derive = "0.8.0"
+once_cell = "1.3.1"
