--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,19 @@ serde = { version = "1.0.103", features = ["derive"] }
 serde_json = "1.0.44"
 rust-crypto = "0.2.36"
 chrono = { version = "0.4.10", features = ["serde"] }
-diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
+diesel = { version = "1.4.2", features = [
+ "chrono",
+ "postgres",
+ "r2d2",
+ "uuidv07",
+ "serde_json",
+ "numeric",
+]}
+num-bigint = "0.2.6"
+bigdecimal = "0.1.0"
+ipnetwork = "0.16.0"
+num-integer = "0.1.42"
+diesel-derive-enum = { version = "0.4", features = ["postgres"] }
 validator = "0.10.0"
 validator_derive = "0.10.0"
 slug = "0.1.4"
